[package]
authors = ["Lukas Sabatschus <luksablp@gmail.com>"]
edition = "2018"
name = "counting_bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serenity = {version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework"]}
serenity = {version = "0.10"}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
chrono = "*"
regex = "1"
lazy_static = "1.4.0"
